{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 399,
  "lineage": "1234c5f1-b798-aff8-5838-8fe3e760160a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "11.0.2.5",
            "domain": "vpc",
            "id": "eipalloc-05c3688279546f21a",
            "public_dns": "ec2-34-193-114-202.compute-1.amazonaws.com",
            "public_ip": "34.193.114.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Production-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02354e95b39ca8dec",
            "arn": "arn:aws:ec2:us-east-1:599569978473:instance/i-085b21522390929a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085b21522390929a7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Amazon Linux2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eedd4c15802d96eb",
            "private_dns": "ip-11-0-1-26.ec2.internal",
            "private_ip": "11.0.1.26",
            "public_ip": "3.219.45.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f7a629fcc4bc4036",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e520e3bbccf6132",
            "tags": {
              "Name": "Testing TerrafomNew"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-052960c67ea08d07d"
            ]
          },
          "depends_on": [
            "aws_security_group.Testing_TerrafomNew",
            "aws_subnet.TFPublic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:internet-gateway/igw-0f898a64cf87ab63b",
            "id": "igw-0f898a64cf87ab63b",
            "owner_id": "599569978473",
            "tags": {
              "Name": "TFmain"
            },
            "vpc_id": "vpc-079f69398db307394"
          },
          "depends_on": [
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c3688279546f21a",
            "id": "nat-0071f6affc398d8a0",
            "network_interface_id": "eni-0459b11531f65d21d",
            "private_ip": "11.0.1.167",
            "public_ip": "34.193.114.202",
            "subnet_id": "subnet-08e520e3bbccf6132",
            "tags": {
              "Name": "Production-NAT-GW"
            }
          },
          "depends_on": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.TFPublic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ecf10c6f7bf4e4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0071f6affc398d8a0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ecf10c6f7bf4e4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat-gw",
            "aws_route_table.TFPrivateRTB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TFPrivateRTB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03ecf10c6f7bf4e4c",
            "owner_id": "599569978473",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "TFPrivateRTB"
            },
            "vpc_id": "vpc-079f69398db307394"
          },
          "depends_on": [
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TFPublicRTB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01d772dbd4b65196f",
            "owner_id": "599569978473",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f898a64cf87ab63b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TFPublicRTB"
            },
            "vpc_id": "vpc-079f69398db307394"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da4c38c00f12e975",
            "route_table_id": "rtb-01d772dbd4b65196f",
            "subnet_id": "subnet-08e520e3bbccf6132"
          },
          "depends_on": [
            "aws_route_table.TFPublicRTB",
            "aws_subnet.TFPublic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c61bb5d94ee1367",
            "route_table_id": "rtb-03ecf10c6f7bf4e4c",
            "subnet_id": "subnet-0911d8aa3f40fcbae"
          },
          "depends_on": [
            "aws_route_table.TFPrivateRTB",
            "aws_subnet.TFPrivate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Testing_TerrafomNew",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:security-group/sg-052960c67ea08d07d",
            "description": "Testing TerrafomNew inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052960c67ea08d07d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Testing TerrafomNew",
            "name_prefix": "",
            "owner_id": "599569978473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing_terrafomnew",
              "description": "terra-vm-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-079f69398db307394"
          },
          "depends_on": [
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mydb1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:security-group/sg-0d40d6cb5846ce5d9",
            "description": "RDS mysql servers (terraform-managed)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d40d6cb5846ce5d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mydb1",
            "name_prefix": "",
            "owner_id": "599569978473",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-079f69398db307394"
          },
          "depends_on": [
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TFPrivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:subnet/subnet-0911d8aa3f40fcbae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.2.0/24",
            "id": "subnet-0911d8aa3f40fcbae",
            "map_public_ip_on_launch": false,
            "owner_id": "599569978473",
            "tags": {
              "Name": "TFPrivate"
            },
            "vpc_id": "vpc-079f69398db307394"
          },
          "depends_on": [
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TFPublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:subnet/subnet-08e520e3bbccf6132",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "11.0.1.0/24",
            "id": "subnet-08e520e3bbccf6132",
            "map_public_ip_on_launch": false,
            "owner_id": "599569978473",
            "tags": {
              "Name": "TFPublic"
            },
            "vpc_id": "vpc-079f69398db307394"
          },
          "depends_on": [
            "aws_vpc.TFmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TFmain",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599569978473:vpc/vpc-079f69398db307394",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0ef237bf29635da9e",
            "default_route_table_id": "rtb-00be6937e4fd10fc7",
            "default_security_group_id": "sg-038990a47650ae002",
            "dhcp_options_id": "dopt-3093f24a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-079f69398db307394",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00be6937e4fd10fc7",
            "owner_id": "599569978473",
            "tags": {
              "Name": "TFmain"
            }
          }
        }
      ]
    }
  ]
}